# archivist

./: .gitignore  README.md  accounts.txt  archive.py  collect.sh  deduplicate.go  gather_accounts.py  jobsplit.py  lists.txt  logger.py  postprocessing.py  pyproject.toml  server.go  snscrape.normal.txt  snscrape.txt  snscrape.txt.alt  socialbot.txt  socialgraph.py  update.go  update.py
manual/: filter-police.py  jobs.txt  misc.txt  police-snscrape-raw.txt  snscrape-police-job.sh
manual/2020-elections/: ballotpedia-congress-candidates-2020-part1-keep.txt  ballotpedia-congress-candidates-2020-part2-keep.txt  ballotpedia-congress-candidates-2020-part3-keep.txt  ballotpedia-congress-candidates-2020-part4-keep.txt  ballotpedia-congress-candidates-2020-part5-keep.txt  ballotpedia-congress-candidates-2020-part6-keep.txt  elections.txt  snscrape-jobs-twitter.txt  total-twitter.txt  total.txt  twitter-@TomWells2020-20201103.jsonl
tools/: README.md  bookmarklet.html  check.py  convert.py  kofc.py  kofc.txt  main.txt  proxy.go  snscrape-job.sh  twitter-@internetsociety-deduplicated-manual-2020712.txt  uknight.txt
