[tool.poetry]
name = "archivist"
version = "0.1.0"
description = ""
authors = ["InnovativeInventor <theinnovativeinventor@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
tweepy = "^3.9.0"
snscrape = "^0.3.4"

[tool.poetry.dev-dependencies]
internetarchive = "^1.9.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
